--- a/src/index.css
+++ b/src/index.css
@@ -20,15 +20,20 @@ body{
 nav {
   background-color: #121212;
   color: white;
-  padding: 10px;
+  padding: 10px 10px 0;
   text-align: center;
+  margin-bottom: 0;
+  display: flex;
+}
+
+nav select{
   margin-bottom: 0;
 }
 
 .container {
   text-align: center;
   font-family: Arial, sans-serif;
-  padding: 20px;
+  padding: 0 20px 20px 20px;
   background-color: #121212;
   color: white;
 }
@@ -39,28 +44,31 @@ nav {
 }
 
 .movies-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  display: flex;
+  overflow: auto;
+  white-space: nowrap;
   gap: 20px;
   justify-content: center;
   padding: 10px;
 }
 
 .movie-card {
+  display: inline-block;
   background: #1e1e1e;
   border-radius: 10px;
-  overflow: hidden;
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease;
   cursor: pointer;
+  width: 300px;
+  height: 100%;
+  overflow: hidden;
 }
 
 .movie-card:hover {
-  transform: scale(1.05);
+  transform: scale(1.01);
 }
 
 .movie-image {
   width: 100%;
-  height: 300px;
   object-fit: cover;
   border-bottom: 2px solid #ff9800;
 }
@@ -108,7 +116,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  animation: slideUp 0.3s ease-out;
+  animation: slideUp 0.4s ease-out;
   backdrop-filter: blur(5px);
 }
 
@@ -142,9 +150,13 @@ nav {
 @keyframes slideUp {
   from {
     transform: translateY(100%);
+    background-color: rgba(0, 0, 0, 0);
+    backdrop-filter: blur(0);
   }
   to {
     transform: translateY(0);
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
   }
 }
 
