--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ a:focus::after {
 }
 
 nav {
-  background-color: #12121254;
+  background-color: #ff69b41a;
   color: white;
   padding: 10px 10px 0;
   text-align: center;
@@ -102,7 +102,7 @@ nav a {
 .movie-image {
   width: 100%;
   object-fit: cover;
-  border-bottom: 2px solid #ff9800;
+  border-bottom: 2px solid hotpink;
 }
 
 .movie-info {
@@ -116,7 +116,7 @@ nav a {
 
 .movie-rating {
   font-size: 1rem;
-  color: #ff9800;
+  color: hotpink;
 }
 
 .search-container {
@@ -252,6 +252,40 @@ button {
 .rating span {
   font-size: 1.5rem;
   width: 30px;
+}
+
+.comment-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-top: 50px;
+}
+
+.comment-section textarea {
+  width: 500px;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  margin: 0;
+}
+
+.comment-section button {
+  background-color: rgba(255, 105, 180, 0.5);
+  font-size: 1.5rem;
+  padding: 15px;
+}
+
+.comments-feed {
+  display: flex;
+  flex-direction: column;
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 30px 50px;
+}
+
+.comments-feed ::marker {
+  color: hotpink;
 }
 
 @keyframes slideUp {
